2009-08-24  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: Module for abstracting amreport data
	* perl/Makefile.am: compile the module
	* installcheck/Amanda_Report.pl: test for Amanda::Report
	* installcheck/Makefile.am: add the test to installcheck

2009-08-21  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amgtar.8.xml: changes suggested by Christopher
	  <chrismcc@pricegrabber.com>

2009-08-20  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_comm_proxy.c: include "ipc-protocol.h"
	* ndmp-src/Makefile.am: Link with libamanda
	* ndmp-src/ndmos_glib.h: Use strtoll.

2009-08-20  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/*: Import of ndmjob + ndmp-proxy.
	* common-src/ndmp-protocol.h: Protocol between amanda and ndmp-proxy.
	* configure.in: AMANDA_PROG_RPCGEN, build ndmp-src.
	* config/amanda/progs.m4: AMANDA_PROG_RPCGEN.
	* config/amanda/components.m4: AMANDA_WITHOUT_NDMP.
	* Makefile.am: Build ndmp-src.

2009-08-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ipc-binary.c: New protocol
	* common-src/ipc-binary.h: New protocol header
	* common-src/Makefile.am: Compile it.

2009-08-20  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-changers.7.xml: Typo.

2009-08-20  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: tweak
	* perl/Amanda/Changer.pm: fix configuration to also include device
	  alias configuration
	* perl/Amanda/Device.pod: deprecate $dev->configure()
	* man/xml-source/amanda-changers.7.xml: better documentation
	  of device configuration via changers

2009-08-18  Dustin J. Mitchell <dustin@zmanda.com>
	* restore-src/Makefile.am restore-src/amrestore.c: remove
	* common-src/fileheader.c common-src/fileheader.h: add
	  summarize_header
	* common-src/match.c: fix match_level bugs
	* installcheck/Amanda_Header.pl: test matches_dumpspecs
	* server-src/Makefile.am server-src/amrestore.pl: new perl version